src/objects/Text_Document__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiver</fullName>
                </value>
                <value>
                    <fullName>Disclaimer</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>Instructions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Text Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Text Documents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Text Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>